--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,9 @@ android {
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        manifestPlaceholders = [onesignal_app_id: "fb4ffd22-3be2-42a1-96da-2a958943cd08",
+        manifestPlaceholders = [onesignal_app_id               : "fb4ffd22-3be2-42a1-96da-2a958943cd08",
                                 // Project number pulled from dashboard, local value is ignored.
                                 onesignal_google_project_number: "REMOTE"]
     }
@@ -27,9 +28,22 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+
+    /**
+     * Source: http://stackoverflow.com/a/34834772/5047666
+     * The condition noted below is primarly due to the Google Map Activity used in this project.
+     * The commented out line of code below will generate this error:
+     * Error:Execution failed for task ':app:processDebugGoogleServices'.
+     *> Please fix the version conflict either by updating the version of
+     the google-services plugin (information about the latest version is
+     available at https://bintray.com/android/android-tools/com.google.gms.google-services/)
+     or updating the version of com.google.android.gms to 9.0.0.
+     //apply plugin: 'com.google.gms.google-services'
+    **/
+
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
-
     compile 'com.parse.bolts:bolts-tasks:1.3.0'
     compile 'com.parse:parse-android:1.13.0'
     compile 'com.google.android.gms:play-services:10.0.1'
@@ -43,7 +57,6 @@ dependencies {
     compile 'com.onesignal:OneSignal:3.4.2'
     compile 'com.google.android.gms:play-services-location:10.0.1'
     compile 'com.google.android.gms:play-services-gcm:10.0.1'
-
+    compile 'com.android.support:multidex:1.0.1'
     testCompile 'junit:junit:4.12'
-    apply plugin: 'com.google.gms.google-services'
 }
