--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     compile 'com.parse.bolts:bolts-tasks:1.3.0'
     compile 'com.parse:parse-android:1.13.0'
     compile 'com.google.android.gms:play-services:10.0.1'
-    compile 'com.android.support:multidex:1.0.0'
+    compile 'com.android.support:multidex:1.0.1'
     compile 'com.google.firebase:firebase-core:10.0.1'
     compile 'com.google.firebase:firebase-messaging:10.0.1'
     compile 'com.google.firebase:firebase-crash:10.0.1'
@@ -57,6 +57,6 @@ dependencies {
     compile 'com.onesignal:OneSignal:3.4.2'
     compile 'com.google.android.gms:play-services-location:10.0.1'
     compile 'com.google.android.gms:play-services-gcm:10.0.1'
-    compile 'com.android.support:multidex:1.0.1'
     testCompile 'junit:junit:4.12'
+    apply plugin: 'com.google.gms.google-services'
 }
